# shephard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PKGBUILD  README.md
docs/man/: shephard.1
src/: apply.rs  cli.rs  config.rs  discovery.rs  git.rs  lib.rs  main.rs  report.rs  state.rs  tui.rs  workflow.rs
tests/: integration_behaviors.rs
