[package]
name = "shephard"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24"
toml = "0.8"
walkdir = "2.5"
