[package]
name = "shephard"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
hostname = "0.4"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24"
textwrap = "0.16"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
